@@ -1,3 +1,7 @@
+2008-09-16  Jeremy Cribb <jcribb@email.unc.edu>
+	* .cvsignore: added.
+	* wfpoles_forces.m: added.  summarizes force calibration as a function of input voltage for wake-forest pole geometry.
+
 2007-11-09  Jeremy Cribb <jcribb@email.unc.edu>
 	* pole_locator.m: modified to include figure handling.  Edited documentation.
 
